--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -653,3 +653,47 @@ tr {
 .drop-zone-highlight{
 	background-color: #ccc;
 }
+
+.new-folder{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	background-color: #00000088;
+}
+
+.new-folder > div{
+	border-radius: 10px;
+	width: 100%;
+	max-width: 400px;
+	min-height: 200px;
+	padding: 10px;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	background-color: #ccc;
+}
+
+.new-folder-input{
+	padding: 1em;
+	border: solid thin #ccc;
+	width: 100%;
+}
+
+.new-folder >div > button{
+	width: 100px;
+}
+
+.new-folder > div > .close-button{
+	width: 30px;
+	position: absolute;
+	right: 10px;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	transform: rotate(45deg);
+	scale: 2;
+}
